<resources>
    <string name="app_name">DIDI</string>
    <string name="splash_title">滴滴出行</string>
    <string name="splash_message">滴滴一下 美好出行</string>
    <string name="pls_input_phone">请输入手机号码</string>
    <string name="login">登录</string>
    <string name="next">下一步</string>
    <string name="sms_code_input">输入验证码</string>
    <string name="sms_code_send_phone">验证码已经发送至%s</string>
    <string name="resend">重新发送</string>
    <string name="after_time_resend">%d秒后重新发送</string>
    <string name="create_pw">创建秘密</string>
    <string name="pls_input_pw">请输入密码</string>
    <string name="confirm">确认</string>
    <string name="pls_input_pw_again">请再次输入密码</string>
    <string name="input_pw">输入密码</string>
    <string name="sending">正在向%s发送短信验证码</string>
    <string name="sms_code_error">验证码错误</string>
    <string name="register_suc_and_loging">注册成功，正在为您自动登录</string>
    <string name="user_exist">用户已经存在</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="password_is_not_equal">两次输入的密码不一样</string>
    <string name="error_server"> 服务器繁忙 </string>
    <string name="modify_pw">修改密码</string>
    <string name="check_user">正在检查用户</string>
    <string name="register">注册</string>
    <string name="login_suc">登录成功</string>
    <string name="password_error">密码错误</string>
    <string name="where_are_you_go">您要去哪</string>
    <string name="start">起点</string>
    <string name="end">终点</string>
    <string name="locating">定位中...</string>

    <string name="call">呼叫快车</string>
    <string name="cancel">取消</string>
    <string name="route_info">全程%1$d公里，预计%2$.2f元，%3$d分钟到达</string>
    <string name="calling_driver">正在呼叫附近司机</string>
    <string name="accept_info">司机：%1$s(车牌:%2$s)已经接单,全程%3$d公里，%4$d分钟到达</string>
    <string name="driver_arrive">司机：%1$s(车牌:%2$s)已经到达</string>
    <string name="order_cancel_suc">取消成功</string>
    <string name="order_cancel_error">取消失败</string>
    <string name="pay">支付</string>
    <string name="pay_info">行程结束，感谢你使用滴滴，你需支付 %1$.2f 元。\n 司机：%2$s 车牌:%3$s</string>
    <string name="cancel_fail">取消失败</string>
    <string name="pay_suc">支付成功</string>
    <string name="show_call_suc">已有司机收到请求</string>
    <string name="show_call_fail" >呼叫失败，稍后再试</string>
    <string name="driver_arrive_pure">司机已到达</string>
    <string name="canceling">订单取消中...</string>





    <string name="title_location">获取定位数据</string>
    <string name="battery_saving">低功耗模式</string>
    <string name="device_sensors">仅设备模式</string>
    <string name="hight_accuracy">高精度模式</string>
    <string name="interval">定位周期(ms)</string>
    <string name="httpTimeout">网络超时(ms)</string>
    <string name="location_once">单次定位</string>
    <string name="needAddress">逆地理编码</string>
    <string name="cacheAble">开启缓存</string>
    <string name="onceLastest">提高首次定位精度</string>
    <string name="gpsFirst">GPS优先</string>
    <string name="useSensor">使用传感器</string>
    <string name="wifiScan">开启wifi扫描</string>

    <string name="alarmInterval">唤醒周期(s)</string>

    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>

    <string name="defaultInteval">2000</string>
    <string name="defaultHttpTimeout">30000</string>
</resources>
