<?xml version="1.0" encoding="utf-8"?>

<!--侧滑菜单-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dalimao.didi.main.ui.MainActivity">
    <!--第一个子元素是抽屉没有打开时显示的布局 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/activity_main2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/mapContainer"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_marginTop="45dp"
                android:layout_toEndOf="@+id/location_errInfo_text" />

            <Button
                android:id="@+id/location_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="100dp"
                android:text="Location" />

            <TextView
                android:id="@+id/location_errInfo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@color/red"
                android:text="TextView"
                android:textColor="@color/color_dark_gray"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/select_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@color/bg_white"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start"
                        android:textSize="@dimen/text_size_normal" />

                    <AutoCompleteTextView
                        android:id="@+id/start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end"
                        android:textSize="@dimen/text_size_normal" />

                    <AutoCompleteTextView
                        android:id="@+id/end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/where_are_you_go"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/bg_white">

                <ImageView
                    android:id="@+id/im_user"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@mipmap/user" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/locating"
                    android:textSize="@dimen/text_size_normal" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/call_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/bg_white"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin"
                android:visibility="gone">

                <TextView
                    android:id="@+id/route_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/text_size_normal" />

                <LinearLayout
                    android:id="@+id/loading_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/calling_driver"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/activity_vertical_margin"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_call_driver"
                        style="@style/Dialog.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:text="@string/call" />

                    <Button
                        android:id="@+id/btn_cancel"
                        style="@style/Dialog.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:text="@string/cancel" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_pay"
                    style="@style/Dialog.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay" />
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>
    <!--第二个子元素是抽屉中的内容，即抽屉布局 -->
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/head"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/head_default" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:text="1597657575"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>